--- a/couchlog/templates/imports/datatables.html
+++ b/couchlog/templates/imports/datatables.html
@@ -1,3 +1,3 @@
-    <!-- <link rel="stylesheet" href="{{MEDIA_URL}}webapp/datatables/css/demo_table_jui.css" type="text/css"> -->
+    <!-- <link rel="stylesheet" href="{{STATIC_URL}}webapp/datatables/css/demo_table_jui.css" type="text/css"> -->
     <script type="text/javascript" src="http://www.datatables.net/download/build/jquery.dataTables.min.js"></script>
-    <!-- <script type="text/javascript" src="{{MEDIA_URL}}webapp/datatables/js/plugins.js"></script> -->
+    <!-- <script type="text/javascript" src="{{STATIC_URL}}webapp/datatables/js/plugins.js"></script> -->
