--- a/couchlog/templates/couchlog/single.html
+++ b/couchlog/templates/couchlog/single.html
@@ -30,6 +30,7 @@
   <table border="0" style="border: 1px solid black; padding: 10px;">
     <tr><td>Date:&nbsp;&nbsp;</td><td><strong>{{ log.date|date:"d M Y H:i"}}</strong></td></tr>
     <tr><td>Status:&nbsp;&nbsp;</td><td><strong>{{ log.get_status_display }}</strong></td></tr>
+    <tr><td>Log level:&nbsp;&nbsp;</td><td><strong>{{ log.level|default:"UNKNOWN" }}</strong></td></tr>
     <tr><td>Message:&nbsp;&nbsp;</td><td><strong>{{ log.message|default:"UNKNOWN ERROR" }}</strong></td></tr>
     <tr><td>Type:&nbsp;&nbsp;</td><td><strong>{{ log.type }}</strong></td></tr>
     <tr><td>Clinic:&nbsp;&nbsp;</td><td><strong>{{ log.clinic_id|default:"UNKNOWN" }} {% if log.clinic_name %}({{log.clinic_name}}){% endif %}</strong></td></tr>
