adding better generic support for extending couchlog via post create signal
also moving couchlog imports to a subfolder to prevent conflicts with top
level imports with the same name

--- a/couchlog/templates/couchlog/single.html
+++ b/couchlog/templates/couchlog/single.html
@@ -1,7 +1,7 @@
 {% extends "couchlog/base.html" %}
 {% load i18n %}
 {% block page_stylesheets %}
-    {% include "imports/blueprint.html" %}
+    {% include "couchlog/imports/blueprint.html" %}
 <style> 
     .nav a {
         padding-right: 10px;
