--- a/couchlog/templates/couchlog/dashboard.html
+++ b/couchlog/templates/couchlog/dashboard.html
@@ -1,12 +1,12 @@
 {% extends "couchlog/base.html" %}
 {% block page_stylesheets %}
-    {% include "imports/blueprint.html" %}
+    {% include "couchlog/imports/blueprint.html" %}
 {% endblock %}
 {% block javascripts %}
-    {% include "imports/jquery.html" %}
-    {% include "imports/jquery-ui.html" %}
-    {% include "imports/jqmodal.html" %}
-    {% include "imports/datatables.html" %}
+    {% include "couchlog/imports/jquery.html" %}
+    {% include "couchlog/imports/jquery-ui.html" %}
+    {% include "couchlog/imports/jqmodal.html" %}
+    {% include "couchlog/imports/datatables.html" %}
 {% endblock %}
 {% block page_javascripts %}
     <script type="text/javascript">
