--- a/couchlog/templates/couchlog/dashboard.html
+++ b/couchlog/templates/couchlog/dashboard.html
@@ -1,6 +1,7 @@
 {% extends "couchlog/base.html" %}
 {% block page_stylesheets %}
     {% include "couchlog/imports/blueprint.html" %}
+    <link rel="stylesheet" href="{{MEDIA_URL}}couchlog/stylesheets/couchlog.css" type="text/css">
 {% endblock %}
 {% block javascripts %}
     {% include "couchlog/imports/jquery.html" %}
