--- a/couchlog/templates/couchlog/base.html
+++ b/couchlog/templates/couchlog/base.html
@@ -9,6 +9,13 @@
 {% block page_javascripts %}{% endblock %}
 </head>
 <body>
+    <div id="messages">
+    {% block messages %}
+            {% if messages %}{% for message in messages %}
+                <div {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</div>
+            {% endfor %}{% endif %}
+    {% endblock %}
+    </div>
 {% block content %}{% endblock %}
 </body>
 </html>
