fix bulk archive and delete

--- a/couchlog/templates/couchlog/dashboard.html
+++ b/couchlog/templates/couchlog/dashboard.html
@@ -12,6 +12,7 @@
 {% endblock %}
 {% block page_javascripts %}
     <script type="text/javascript" src="{{STATIC_URL}}couchlog/js/logtable.js"></script>
+    <script type="text/javascript" src="{{STATIC_URL}}couchlog/js/submitredirect.js"></script>
     <script type="text/javascript">
     // datatable configuration.
     $(document).ready(function() {
