--- a/couchlog/templates/couchlog/ajax/single.html
+++ b/couchlog/templates/couchlog/ajax/single.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+{% load couchlog_tags %}
 {% load i18n %}
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
@@ -22,6 +23,9 @@
     <tr><td>Stack Trace:&nbsp;&nbsp;</td><td><strong>{{ log.stack_trace|linebreaksbr|truncatewords:50 }}</strong></td></tr>
     <tr><td>Url:&nbsp;&nbsp;</td><td><strong>{{ log.url|default:"N/A" }}</strong></td></tr>
     <tr><td>Query Params:&nbsp;&nbsp;</td><td><strong>{{ log.query_params|default:"N/A"|truncatewords:10 }}</strong></td></tr>
+{% for item in log.dynamic_properties %}
+    <tr><td>{{ item }}:&nbsp;&nbsp;</td><td><strong>{{ log|get_attr:item|default:"N/A" }}</strong></td></tr>
+{% endfor %}
   </table>
 <div class="nav">
     <a href="{% url couchlog_single log.get_id %}" target="_blank">new window</a>
