--- a/couchlog/templates/couchlog/lucene_docs.html
+++ b/couchlog/templates/couchlog/lucene_docs.html
@@ -10,7 +10,7 @@
 {% block content %}
 <p>Advanced search lets you do freetext searches as well as searches on specific fields using the 
 <a href="http://lucene.apache.org/java/2_4_0/queryparsersyntax.html">lucene query syntax</a>.  Review
-the documentation there for detailed information.  For couchlog, the message, type, url, and extra info
+the documentation there for detailed information.  For couchlog, the message, type, and url
 are searched by default.  Additionally the following fields can be searched:</p>
 <table> 
 <thead>
@@ -20,34 +20,24 @@ are searched by default.  Additionally the following fields can be searched:</p>
 </tr> 
 </thead>
 <tbody>
-<tr> 
-    <td>clinic</td> 
-    <td>Clinic code (e.g. "5010140")</td> 
-</tr> 
-<tr> 
-    <td>version</td> 
-    <td>App version (e.g. "0.1.0")</td> 
-</tr> 
-<tr> 
-	<td>commit</td> 
-	<td>Commit id (hash)</td> 
-</tr> 
+<tr>
 	<td>date</td> 
 	<td>date and time of error.</td> 
+</tr>
+<tr>
+    <td>level</td> 
+    <td>log level of error.</td> 
 </tr>
 </tbody>
 </table>
 <h2>Examples</h2>
 <p>Here are some search examples (paste these into the search bar to see results).</p>
 
-<p class="example">Search all documents from two different clinics:</p>
-<pre class="searchtext">clinic:5010140 OR clinic:5010120</pre>
+<p class="example">Search all documents that are errors or warnings:</p>
+<pre class="searchtext">level:ERROR OR level:WARNING</pre>
 
 <p class="example">Search all documents matching "files" in october:</p>
 <pre class="searchtext">files AND date:[2010-10-01 TO 2010-11-01]</pre>
-
-<p class="example">Search all documents matching a certain version, but not a certain commit:</p>
-<pre class="searchtext">version:0.1.0 AND NOT commit:fe272d2cd55a0dfc6b4df33c73e39a79d2a515d8</pre>
 
 You can do lots of complicated things!
 {% endblock %}
