enable configurable media locations, useful for offline support

--- a/couchlog/templates/couchlog/imports/blueprint.html
+++ b/couchlog/templates/couchlog/imports/blueprint.html
@@ -1,3 +1,3 @@
-    <link rel="stylesheet" href="https://github.com/joshuaclayton/blueprint-css/raw/master/blueprint/screen.css" type="text/css" media="screen, projection">
-    <link rel="stylesheet" href="https://github.com/joshuaclayton/blueprint-css/raw/master/blueprint/print.css" type="text/css" media="print">
-    <!--[if lt IE 8]><link rel="stylesheet" href="https://github.com/joshuaclayton/blueprint-css/raw/master/blueprint/ie.css" type="text/css" media="screen, projection"><![endif]-->
+    <link rel="stylesheet" href="{{ couchlog_config.COUCHLOG_BLUEPRINT_HOME }}screen.css" type="text/css" media="screen, projection">
+    <link rel="stylesheet" href="{{ couchlog_config.COUCHLOG_BLUEPRINT_HOME }}print.css" type="text/css" media="print">
+    <!--[if lt IE 8]><link rel="stylesheet" href="{{ couchlog_config.COUCHLOG_BLUEPRINT_HOME }}ie.css" type="text/css" media="screen, projection"><![endif]-->
