--- a/couchlog/templates/couchlog/imports/jqmodal.html
+++ b/couchlog/templates/couchlog/imports/jqmodal.html
@@ -1,2 +1,2 @@
-    <link rel="stylesheet" href="http://dev.iceburg.net/jquery/jqModal/jqModal.css" type="text/css">
-    <script type="text/javascript" src="http://dev.iceburg.net/jquery/jqModal/jqModal.js"></script>
+    <link rel="stylesheet" href="{{ couchlog_config.COUCHLOG_JQMODAL_CSS_LOC }}" type="text/css">
+    <script type="text/javascript" src="{{ couchlog_config.COUCHLOG_JQMODAL_LOC }}"></script>
