--- a/couchlog/templates/couchlog/imports/jquery-ui.html
+++ b/couchlog/templates/couchlog/imports/jquery-ui.html
@@ -1,3 +1,3 @@
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.7/themes/smoothness/jquery-ui.css" type="text/css">
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.7/jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="{{ couchlog_config.COUCHLOG_JQUERYUI_CSS_LOC }}" type="text/css">
+    <script type="text/javascript" src="{{ couchlog_config.COUCHLOG_JQUERYUI_LOC }}"></script>
     
