--- a/couchlog/templates/couchlog/imports/jquery.html
+++ b/couchlog/templates/couchlog/imports/jquery.html
@@ -1,1 +1,1 @@
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
+    <script type="text/javascript" src="{{ couchlog_config.COUCHLOG_JQUERY_LOC }}"></script>
