--- a/couchlog/templates/couchlog/single.html
+++ b/couchlog/templates/couchlog/single.html
@@ -58,7 +58,7 @@
 {% endfor %}
   </table>
 <div class="nav">
-    <a href="{% url couchlog_home %}">all couchlog errors</a>
+    <a href="{% url 'couchlog_home' %}">all couchlog errors</a>
 </div>
 </div>
 </div>
