--- a/couchlog/templates/couchlog/ajax/single.html
+++ b/couchlog/templates/couchlog/ajax/single.html
@@ -28,7 +28,7 @@
 {% endfor %}
   </table>
 <div class="nav">
-    <a href="{% url couchlog_single log.get_id %}" target="_blank">new window</a>
+    <a href="{% url 'couchlog_single' log.get_id %}" target="_blank">new window</a>
 </div>
 </div>
 </body>
