add extra details to record view

--- a/couchlog/templates/couchlog/single.html
+++ b/couchlog/templates/couchlog/single.html
@@ -45,14 +45,24 @@
   <table border="0" style="border: 1px solid black; padding: 10px;">
     <tr><td>Date:&nbsp;&nbsp;</td><td><strong>{{ log.date|date:"d M Y H:i"}}</strong></td></tr>
     <tr><td>Status:&nbsp;&nbsp;</td><td><strong>{{ log.get_status_display }}</strong></td></tr>
+    <tr><td>Log name:&nbsp;&nbsp;</td><td><strong>{{ log.name|default:"UNKNOWN" }}</strong></td></tr>
     <tr><td>Log level:&nbsp;&nbsp;</td><td><strong>{{ log.level|default:"UNKNOWN" }}</strong></td></tr>
     <tr><td>Message:&nbsp;&nbsp;</td><td><strong>{{ log.message|default:"UNKNOWN ERROR" }}</strong></td></tr>
+
+    <tr><td></td><td></td></tr>
+
     <tr><td>Type:&nbsp;&nbsp;</td><td><strong>{{ log.type }}</strong></td></tr>
+    <tr><td>Function:&nbsp;&nbsp;</td><td><strong>{{ log.function|default:"UNKNOWN" }}</strong></td></tr>
+    <tr><td>Path:&nbsp;&nbsp;</td><td><strong>{{ log.pathname|default:"UNKNOWN" }}</strong></td></tr>
+    <tr><td>Line number:&nbsp;&nbsp;</td><td><strong>{{ log.line_number|default:"UNKNOWN" }}</strong></td></tr>
     <tr><td>Stack Trace:&nbsp;&nbsp;</td><td><strong>{{ log.stack_trace|linebreaksbr }}</strong></td></tr>
+
+    <tr><td></td><td></td></tr>
+
     <tr><td>User:&nbsp;&nbsp;</td><td><strong>{{ log.user|default:"N/A" }}</strong></td></tr>
     <tr><td>Url:&nbsp;&nbsp;</td><td><strong>{{ log.url|default:"N/A" }}</strong></td></tr>
     <tr><td>Query Params:&nbsp;&nbsp;</td><td><strong>{{ log.query_params|default:"N/A" }}</strong></td></tr>
-    
+
 {% for item in log.dynamic_properties %}
     <tr><td>{{ item }}:&nbsp;&nbsp;</td><td><strong>{{ log|get_attr:item|default:"N/A" }}</strong></td></tr>
 {% endfor %}
